--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+  <meta name="description" content="Welcome to Big Dreams Real Estate. At Big Dreams, our helpful real estate agents and property managers can help you with your property needs when it ..."/>
+  <meta name="keywords" content="House, Apartmant, Building Area, Real Estate">
+  <meta name="author" content="Milosminda">
+  <meta name="robots" content="index, follow">
   <title>Real Estate</title>
 
   <link rel="apple-touch-icon" sizes="180x180" href="img/fev/apple-touch-icon.png">
@@ -13,9 +18,34 @@
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
 
-  <link
-    href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Caveat+Brush&family=Nunito:wght@400;700;800&family=Poppins:wght@700&display=swap"
-    rel="stylesheet">
+  <meta property="og:image" content="img/logo.png">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="1024">
+  <meta property="og:image:height" content="1024">
+
+  <!-- 301 redirect  -->
+  <!-- HTTP to HTTPS   -->
+  <!-- robots.txt -->
+  <!-- Sitemap -->
+  <!-- Broken Links Test -->
+  <!-- Google Analytics Test -->
+  <!-- Social Media Test -->
+  <!-- HTML Compression/GZIP Test -->
+  <!-- Site Loading Speed Test -->
+  <!-- Page Cache Test (Server Side Caching) -->
+  <!-- JavaScript Caching Test -->
+  <!-- CSS Caching Test -->
+  <!-- JavaScript Minification Test -->
+  <!-- URL Redirects Test -->
+  <!-- URL Canonicalization Test -->
+  <!-- Plaintext Emails Test -->
+  <!-- Structured Data Test -->
+  <!-- Custom 404 Error Page Test -->
+  <!-- Canonical Tag Test -->
+
+  <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Caveat+Brush&family=Nunito:wght@400;700;800&family=Poppins:wght@700&display=swap" rel="stylesheet">
+
+  <link href="https://www.milosminda.com" rel="canonical">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -31,22 +61,22 @@
         <a href="#" class="topbar__link">register </a>
         to create a new listing</p>
       <div class="social__media-topbar">
-        <a href="#" class="social__media-link">
+        <a href="https://www.facebook.com/" class="social__media-link" target="_blank">
           <svg class="icon social__media-icon">
             <use xlink:href="img/svg/sprite.svg#icon-facebook"></use>
           </svg>
         </a>
-        <a href="#" class="social__media-link">
+        <a href="https://twitter.com/" class="social__media-link" target="_blank">
           <svg class="icon social__media-icon">
             <use xlink:href="img/svg/sprite.svg#icon-twitter"></use>
           </svg>
         </a>
-        <a href="#" class="social__media-link">
+        <a href="https://www.linkedin.com/" class="social__media-link" target="_blank">
           <svg class="icon social__media-icon">
             <use xlink:href="img/svg/sprite.svg#icon-linkedin"></use>
           </svg>
         </a>
-        <a href="#" class="social__media-link">
+        <a href="https://myaccount.google.com/" class="social__media-link" target="_blank">
           <svg class="icon social__media-icon">
             <use xlink:href="img/svg/sprite.svg#icon-google-plus"></use>
           </svg>
@@ -206,7 +236,7 @@
       <!-- Header Form -->
       <div class="form__content">
         <form action="#" class="form">
-          <h3 class="heading-3">Search for properties:</h3>
+          <h2 class="heading-3">Search for properties:</h2>
           <div class="form__group">
             <label for="keyword" class="form__label">Keyword
               <input id="keyword" type="text" class="form__input" placeholder="Any">
@@ -304,7 +334,7 @@
             <use xlink:href="img/svg/sprite.svg#icon-home-outline"></use>
           </svg>
         </div>
-        <h4 class="heading-4">Finds Your home</h4>
+        <h3 class="heading-4">Finds Your home</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit illo doloremque doloribus omnis voluptatem
           magnam nulla quas eaque, aperiam cumque!</p>
       </div>
@@ -314,7 +344,7 @@
             <use xlink:href="img/svg/sprite.svg#icon-lock"></use>
           </svg>
         </div>
-        <h4 class="heading-4">Securing the property</h4>
+        <h3 class="heading-4">Securing the property</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit illo doloremque doloribus omnis voluptatem
           magnam nulla quas eaque, aperiam cumque!</p>
       </div>
@@ -324,7 +354,7 @@
             <use class="icon-tools-2" xlink:href="img/svg/sprite.svg#icon-tools-2"></use>
           </svg>
         </div>
-        <h4 class="heading-4">Furnishing the property</h4>
+        <h3 class="heading-4">Furnishing the property</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit illo doloremque doloribus omnis voluptatem
           magnam nulla quas eaque, aperiam cumque!</p>
       </div>
@@ -334,11 +364,11 @@
             <use xlink:href="img/svg/sprite.svg#icon-target"></use>
           </svg>
         </div>
-        <h4 class="heading-4">Providing legal support</h4>
+        <h3 class="heading-4">Providing legal support</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit illo doloremque doloribus omnis voluptatem
           magnam nulla quas eaque, aperiam cumque!</p>
       </div>
-      <img src="img/features.png" alt="" class="features-big-text">
+      <img src="img/features.png" alt="Features img" class="features-big-text">
     </div>
   </section>
   <!-- Service END -->
@@ -370,7 +400,7 @@
 
         <!-- Card CONTENT -->
         <div class="card__content">
-          <h4 class="heading-4 card__content-title"><a href="#">Via della Conciliazione</a></h4>
+          <h3 class="heading-4 card__content-title"><a href="#">Via della Conciliazione</a></h3>
           <div class="card__content-location">
             <svg class="icon card__content-icon">
               <use xlink:href="img/svg/sprite.svg#icon-map-pin"></use>
@@ -442,7 +472,7 @@
 
         <!-- Card CONTENT -->
         <div class="card__content">
-          <h4 class="heading-4 card__content-title"><a href="#">Carnaby Street</a></h4>
+          <h3 class="heading-4 card__content-title"><a href="#">Carnaby Street</a></h3>
           <div class="card__content-location">
             <svg class="icon card__content-icon">
               <use xlink:href="img/svg/sprite.svg#icon-map-pin"></use>
@@ -506,7 +536,7 @@
 
         <!-- Card CONTENT -->
         <div class="card__content">
-          <h4 class="heading-4 card__content-title"><a href="#">Rue de Rivoli Street</a></h4>
+          <h3 class="heading-4 card__content-title"><a href="#">Rue de Rivoli Street</a></h3>
           <div class="card__content-location">
             <svg class="icon card__content-icon">
               <use xlink:href="img/svg/sprite.svg#icon-map-pin"></use>
@@ -578,7 +608,7 @@
 
         <!-- Card CONTENT -->
         <div class="card__content">
-          <h4 class="heading-4 card__content-title"><a href="#">Houston Street</a></h4>
+          <h3 class="heading-4 card__content-title"><a href="#">Houston Street</a></h3>
           <div class="card__content-location">
             <svg class="icon card__content-icon">
               <use xlink:href="img/svg/sprite.svg#icon-map-pin"></use>
@@ -730,7 +760,7 @@
 
         <!-- Card CONTENT -->
         <div class="card__content">
-          <h4 class="heading-4 card__content-title"><a href="#">Houston Street</a></h4>
+          <h3 class="heading-4 card__content-title"><a href="#">Houston Street</a></h3>
           <div class="card__content-location">
             <svg class="icon card__content-icon">
               <use xlink:href="img/svg/sprite.svg#icon-map-pin"></use>
@@ -794,7 +824,7 @@
 
         <!-- Card CONTENT -->
         <div class="card__content">
-          <h4 class="heading-4 card__content-title"><a href="#">Via della Conciliazione</a></h4>
+          <h3 class="heading-4 card__content-title"><a href="#">Via della Conciliazione</a></h3>
           <div class="card__content-location">
             <svg class="icon card__content-icon">
               <use xlink:href="img/svg/sprite.svg#icon-map-pin"></use>
@@ -858,7 +888,7 @@
 
         <!-- Card CONTENT -->
         <div class="card__content">
-          <h4 class="heading-4 card__content-title"><a href="#">Rue de Rivoli Street</a></h4>
+          <h3 class="heading-4 card__content-title"><a href="#">Rue de Rivoli Street</a></h3>
           <div class="card__content-location">
             <svg class="icon card__content-icon">
               <use xlink:href="img/svg/sprite.svg#icon-map-pin"></use>
@@ -1173,16 +1203,16 @@
           <img src="img/user-1.jpg" alt="User 1">
         </div>
         <div class="agents__content">
-          <h4 class="heading-4">
-            <a href="#" class="agents__content-title">Nick Smith</a>
+          <h3 class="heading-4">
+            <a href="#" class="agents__content-title" rel="nofollow">Nick Smith</a>
             <span>Consultant</span>
-          </h4>
+          </h3>
           <div class="agents__email">
-            <a href="mailto:info@example.com">info@example.com</a>
+            <a href="mailto:info@example.com" rel="nofollow">info@example.com</a>
           </div>
           <div class="agents__phone">+123-456-789</div>
           <div class="agents__web">
-            <a href="mailto:http://example.com">http://example.com</a>
+            <a href="mailto:http://example.com" rel="nofollow">http://example.com</a>
           </div>
         </div>
       </div>
@@ -1192,16 +1222,16 @@
           <img src="img/user-2.jpg" alt="User 2">
         </div>
         <div class="agents__content">
-          <h4 class="heading-4">
-            <a href="#" class="agents__content-title">Lucy Miller</a>
+          <h3 class="heading-4">
+            <a href="#" class="agents__content-title" rel="nofollow">Lucy Miller</a>
             <span>Manager</span>
-          </h4>
+          </h3>
           <div class="agents__email">
-            <a href="mailto:info@example.com">info@example.com</a>
+            <a href="mailto:info@example.com" rel="nofollow">info@example.com</a>
           </div>
           <div class="agents__phone">+123-456-789</div>
           <div class="agents__web">
-            <a href="mailto:http://example.com">http://example.com</a>
+            <a href="mailto:http://example.com" rel="nofollow">http://example.com</a>
           </div>
         </div>
       </div>
@@ -1211,16 +1241,16 @@
           <img src="img/user-3.jpg" alt="User 3">
         </div>
         <div class="agents__content">
-          <h4 class="heading-4">
-            <a href="#" class="agents__content-title">Marry Thomsan</a>
+          <h3 class="heading-4">
+            <a href="#" class="agents__content-title" rel="nofollow">Marry Thomsan</a>
             <span>Director</span>
-          </h4>
+          </h3>
           <div class="agents__email">
-            <a href="mailto:info@example.com">info@example.com</a>
+            <a href="mailto:info@example.com" rel="nofollow">info@example.com</a>
           </div>
           <div class="agents__phone">+123-456-789</div>
           <div class="agents__web">
-            <a href="mailto:http://example.com">http://example.com</a>
+            <a href="mailto:http://example.com" rel="nofollow">http://example.com</a>
           </div>
         </div>
       </div>
@@ -1240,18 +1270,18 @@
           <svg class="icon">
             <use xlink:href="img/svg/sprite.svg#icon-phone"></use>
           </svg>
-          <span>Tel: <a href="tel:+123-456-789">+123-456-789</a></span>
+          <span>Tel: <a href="tel:+123-456-789" rel="nofollow">+123-456-789</a></span>
         </div>
 
         <div class="footer__email">
           <svg class="icon">
             <use xlink:href="img/svg/sprite.svg#icon-envelope"></use>
           </svg>
-          <span>Email: <a href="mailto:info@example.com">info@example.com</a></span>
+          <span>Email: <a href="mailto:info@example.com" rel="nofollow">info@example.com</a></span>
         </div>
 
         <div class="social__media">
-          <a href="#" class="social__media-link">
+          <a href="#" class="social__media-link"></a>
             <svg class="icon social__media-icon">
               <use xlink:href="img/svg/sprite.svg#icon-facebook"></use>
             </svg>
@@ -1277,7 +1307,7 @@
 
       <!-- Locations -->
       <div class="footer__locations">
-        <h4 class="heading-4">Locations</h4>
+        <h3 class="heading-4">Locations</h3>
         <ul class="footer__item">
           <li class="footer__list">
             <svg class="icon social__media-icon">
@@ -1321,7 +1351,7 @@
 
       <!-- Categories -->
       <div class="footer__categories">
-        <h4 class="heading-4">Categories</h4>
+        <h3 class="heading-4">Categories</h3>
         <ul class="footer__item">
           <li class="footer__list">
             <svg class="icon social__media-icon">
@@ -1347,7 +1377,7 @@
 
       <!-- Quick Links -->
       <div class="footer__quick">
-        <h4 class="heading-4">Quick Links</h4>
+        <h3 class="heading-4">Quick Links</h3>
         <ul class="footer__item">
           <li class="footer__list">
             <svg class="icon social__media-icon">
